# simple-programs

./: .gitignore  README.md
basic/: Makefile.am
basic/src/: main.cpp  program.cpp
dominos/: Makefile.am  config.status  configure.ac
dominos/autom4te.cache/: output.0  traces.1
dominos/src/: solution.h
dominos/src/.deps/: bin_program1-solution.Po
fixed_length_file_processing/: Makefile.am  configure.ac
fixed_length_file_processing/src/: file_processing.cpp  file_processing.h  main.cpp
maze_turner/: Makefile.am  README.md
maze_turner/maps/: Map1.txt  Map2  Map3  Map4  Map5  Map6  Map7
maze_turner/src/: main.cpp  maze_turner.cpp  maze_turner.h
prefix_suffix/: Makefile  Makefile.am  Makefile.in  TestFile.txt  config.status  configure  configure.ac  libtool
prefix_suffix/autom4te.cache/: output.0  output.1  requests
prefix_suffix/src/: main.cpp  prefix_suffix.cpp  prefix_suffix.h
prefix_suffix/src/.deps/: bin_prefix_suffix-main.Po  bin_prefix_suffix-prefix_suffix.Po
program1/: Makefile  Makefile.in  TestFile.txt  configure  libtool
program1/autom4te.cache/: output.1  output.2
program1/src/: main.cpp  solution.cpp
program1/src/.deps/: bin_program1-main.Po  bin_program1-program1.Po
program2/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
program2/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
program2/src/.deps/: bin_program2-main.Po  bin_program2-program2.Po
unique_binary_tree/: Makefile  Makefile.am  Makefile.in  TestFile.txt  config.status  configure  configure.ac  libtool
unique_binary_tree/autom4te.cache/: output.0  output.1  requests
unique_binary_tree/src/: binary_tree.cpp  binary_tree.h  main.cpp  solution.cpp  solution.h
unique_binary_tree/src/.deps/: bin_unique_binary_tree-binary_tree.Po  bin_unique_binary_tree-main.Po  bin_unique_binary_tree-solution.Po
